--- a/app/src/main/res/drawable/user_layout_back.xml
+++ b/app/src/main/res/drawable/user_layout_back.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-<solid android:color="#F5F2F2"/>
+<solid android:color="#E4E3E3"/>
     <corners android:radius="10dp"/>
 </shape>
