--- a/app/src/main/res/layout/incoming_messages.xml
+++ b/app/src/main/res/layout/incoming_messages.xml
@@ -6,9 +6,36 @@
     android:layout_marginTop="6dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/typingConstraint_inc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/incoming_msg_back"
+        android:padding="2dp">
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/typingAnimation_inc"
+            android:layout_width="30dp"
+            android:layout_height="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:lottie_repeatCount="12"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:lottie_rawRes="@raw/typing"/>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
+        android:id="@+id/msg_CL"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -16,10 +43,12 @@
         android:background="@drawable/incoming_msg_back"
         android:padding="2dp">
 
+
+
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/incomingImage"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="27dp"
+            android:layout_height="27dp"
             android:src="@drawable/userpng"
             android:layout_marginStart="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -38,10 +67,23 @@
             android:fontFamily="@font/helvetica"
 
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/inc_msg_time"
             android:text="hello"
             android:textColor="@color/black"
-            android:textSize="16dp" />
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/inc_msg_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textSize="8sp"
+            android:text="12:30"
+            android:padding="1dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="@id/incomingMessage"
+            app:layout_constraintTop_toBottomOf="@id/incomingMessage"
+            />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
